--- a/roles/mail-server-install/tasks/postfix.yml
+++ b/roles/mail-server-install/tasks/postfix.yml
@@ -65,22 +65,12 @@
     state: absent
   when: main_cf.stat.exists
 
-- name: Create directory for postfix ldap configs
-  file:
-    path: /etc/postfix/ldap
-    state: directory
-    owner: root
-    group: root
+- name: Generate postfix main.cf
+  template: 
+    src: templates/main.cf.j2
+    dest: /etc/postfix/main.cf
     mode: '0644'
-
-- name: Copy postfix tls_policy_maps
-  copy: 
-    src: files/tls_policy_maps
-    dest: /etc/postfix/
-    mode: '0644'
-
-- name: Generate postfix tls_policy_maps
-  command: postmap /etc/postfix/tls_policy_maps
+  notify: Restart postfix
 
 - name: Check postfix master.cf file
   stat:
@@ -100,6 +90,22 @@
     state: absent
   when: master_cf.stat.exists
 
+- name: Copy postfix master.cf
+  copy: 
+    src: files/master.cf
+    dest: /etc/postfix/
+    mode: '0644'
+  notify: Restart postfix
+
+- name: Copy postfix tls_policy_maps
+  copy: 
+    src: files/tls_policy_maps
+    dest: /etc/postfix/
+    mode: '0644'
+
+- name: Generate postfix tls policy maps
+  command: postmap /etc/postfix/tls_policy_maps
+
 - name: Generate postfix sender and recipient bcc maps
   template: 
     src: '{{ item.src }}'
@@ -116,6 +122,14 @@
     - recipient_bcc_maps
     - sender_bcc_maps
 
+- name: Create directory for postfix ldap configs
+  file:
+    path: /etc/postfix/ldap
+    state: directory
+    owner: root
+    group: root
+    mode: '0644'
+
 - name: Generate postfix virtual map configs for ldap
   template: 
     src: '{{ item.src }}'
@@ -125,17 +139,3 @@
   loop:
     - { src: 'templates/virtual_alias_maps.cf.j2', dest: '/etc/postfix/ldap/virtual_alias_maps.cf' }
     - { src: 'templates/virtual_mailbox_maps.cf.j2', dest: '/etc/postfix/ldap/virtual_mailbox_maps.cf' }
-
-- name: Generate postfix main.cf
-  template: 
-    src: templates/main.cf.j2
-    dest: /etc/postfix/main.cf
-    mode: '0644'
-  notify: Restart postfix
-
-- name: Copy postfix master.cf
-  copy: 
-    src: files/master.cf
-    dest: /etc/postfix/
-    mode: '0644'
-  notify: Restart postfix
