--- a/roles/mail-server-install/tasks/main.yml
+++ b/roles/mail-server-install/tasks/main.yml
@@ -11,6 +11,8 @@
   when: 
     - "ansible_facts['os_family'] == 'RedHat' or ansible_facts['os_family'] == 'Rocky'"
     -  ansible_distribution_major_version | int >= 8
-#- include_tasks: "opendkim.yml"
-#  when: "ansible_facts['os_family'] == 'RedHat' or ansible_facts['os_family'] == 'Rocky'"
+- include_tasks: "opendkim.yml"
+  when: 
+    - "ansible_facts['os_family'] == 'RedHat' or ansible_facts['os_family'] == 'Rocky'"
+    -  ansible_distribution_major_version | int >= 8
 #  when: server_type=='external'
