--- a/roles/mail-server-install/tasks/opendkim.yml
+++ b/roles/mail-server-install/tasks/opendkim.yml
@@ -12,7 +12,6 @@
     state: directory
     owner: root
     group: opendkim
-    mode: '755'
 
 - name: Check signing key
   stat: 
@@ -73,7 +72,7 @@
 - name: Change opendkim keys permission
   file: 
     path: '{{ dkim_path }}/'
-    owner: root
+    owner: opendkim
     group: opendkim
     recurse: yes
     mode: '0640'
