--- a/roles/mail-server-install/tasks/main.yml
+++ b/roles/mail-server-install/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- include_tasks: "prerequisites.yml"
+  when: 
+    - "ansible_facts['os_family'] == 'RedHat' or ansible_facts['os_family'] == 'Rocky'"
+    -  ansible_distribution_major_version | int >= 8
 - include_tasks: "postfix.yml"
   when: 
     - "ansible_facts['os_family'] == 'RedHat' or ansible_facts['os_family'] == 'Rocky'"
