--- a/roles/mail-server-install/tasks/postfix.yml
+++ b/roles/mail-server-install/tasks/postfix.yml
@@ -5,26 +5,25 @@
     state: present
   notify: 
     - Enable postfix
-    - Start postfix
 
-- name: Create directory for keystore
-  file:
-    path: /ssl
-    state: directory
-    owner: root
-    group: root
-    mode: '0644'
+#- name: Create directory for keystore
+#  file:
+#    path: /ssl
+#    state: directory
+#    owner: root
+#    group: root
+#    mode: '0644'
 
-- name: Add server certs and keys
-  copy:
-    src: files/{{ item }}
-    dest: /ssl/
-    decrypt: yes
-    mode: '0600'
-  loop:
-    - cert.pem
-    - fullchain.pem
-    - key.pem
+#- name: Add server certs and keys
+#  copy:
+#    src: files/{{ item }}
+#    dest: /ssl/
+#    decrypt: yes
+#    mode: '0600'
+#  loop:
+#    - cert.pem
+#    - fullchain.pem
+#    - key.pem
 
 - name: Check postfix main.cf file
   stat:
