added postfix black and white lists

--- a/roles/mail-server-install/tasks/postfix.yml
+++ b/roles/mail-server-install/tasks/postfix.yml
@@ -100,6 +100,50 @@
     - recipient_bcc_maps
     - sender_bcc_maps
 
+- name: Generate postfix sender access
+  template: 
+    src: templates/sender_access.j2
+    dest: /etc/postfix/sender_access
+    mode: '0644'
+  notify: Restart postfix
+
+- name: Generate postfix sender access
+  command: postmap /etc/postfix/sender_access
+
+- name: Create postfix blacklist and whitelist folder
+  file: 
+    path: /etc/postfix/lists
+    state: directory
+    owner: root
+    group: root
+    mode: '0644'
+
+- name: Copy postfix blacklists and whitelists
+  copy: 
+    src: '{{ item.src }}'
+    dest: '{{ item.dest }}'
+    mode: '0644'
+  notify: Restart postfix
+  loop:
+    - { src: 'files/black_client', dest: '/etc/postfix/black_client' }
+    - { src: 'files/black_client_ip', dest: '/etc/postfix/black_client_ip' }
+    - { src: 'files/block_dsl', dest: '/etc/postfix/block_dsl' }
+    - { src: 'files/white_client', dest: '/etc/postfix/white_client' }
+    - { src: 'files/white_client_ip', dest: '/etc/postfix/white_client_ip' }
+    - { src: 'files/white_helo', dest: '/etc/postfix/white_helo' }
+    - { src: 'files/mx_accesss', dest: '/etc/postfix/mx_accesss' }
+
+- name: Generate postfix sender and recipient bcc maps
+  command: postmap /etc/postfix/lists/{{ item }}
+  loop:
+    - black_client
+    - black_client_ip
+    - block_dsl
+    - white_client
+    - white_client_ip
+    - white_helo
+    - mx_accesss
+
 - name: Create directory for postfix ldap configs
   file:
     path: /etc/postfix/ldap
