--- a/roles/mail-server-install/tasks/postfix.yml
+++ b/roles/mail-server-install/tasks/postfix.yml
@@ -131,7 +131,7 @@
     - { src: 'files/white_client', dest: '/etc/postfix/lists/white_client' }
     - { src: 'files/white_client_ip', dest: '/etc/postfix/lists/white_client_ip' }
     - { src: 'files/white_helo', dest: '/etc/postfix/lists/white_helo' }
-    - { src: 'files/mx_accesss', dest: '/etc/postfix/lists/mx_accesss' }
+    - { src: 'files/mx_accesss', dest: '/etc/postfix/lists/mx_access' }
 
 - name: Generate postfix sender and recipient bcc maps
   command: postmap /etc/postfix/lists/{{ item }}
@@ -142,7 +142,7 @@
     - white_client
     - white_client_ip
     - white_helo
-    - mx_accesss
+    - mx_access
 
 - name: Create directory for postfix ldap configs
   file:
