--- a/roles/mail-server-install/tasks/prerequisites.yml
+++ b/roles/mail-server-install/tasks/prerequisites.yml
@@ -65,6 +65,11 @@
     state: absent
   when: ssl_conf.stat.exists
 
+- name: Check basic site config
+  stat:
+    path: '/etc/httpd/conf.d/{{ mail_hostname }}.conf'
+  register: site_config
+
 - name: Generate basic site config
   template: 
     src: templates/site.conf
@@ -72,6 +77,7 @@
     owner: apache
     group: apache
     mode: '0644'
+  when: not site_config.stat.exists
 
 - name: Start httpd
   service: 
