--- a/mail-server-install.yml
+++ b/mail-server-install.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: all
+- name: Install MAIL server
+  hosts: all
   become: yes
-  roles: 
-     - mail-server-install
+  roles:
+    - mail-server-install
